// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NameIdDescriptionTags  tests Renders/snapshots Initial Render - Name, ID, Description, and Tags 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main main"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ID
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text bp3-editable-text-placeholder InputWithIdentifier--idValue"
                    tabindex="0"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    />
                  </div>
                </span>
              </span>
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Edit"
                style="vertical-align: middle; cursor: pointer;"
              >
                <svg
                  height="12"
                  viewBox="0 0 12 12"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  >
                    <path
                      d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                      stroke="#555770"
                    />
                    <path
                      d="M6.583 5.146l2.063-2.063"
                      opacity="0.3"
                      stroke="#606170"
                    />
                  </g>
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="TestWrapper_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    placeholder="common.namePlaceholder"
                    type="text"
                    value=""
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main bp3-label descriptionLabel"
            >
              optionalField
              <span
                class="bp3-icon StyledProps--main editOpen"
                data-icon="Edit"
                data-name="edit"
                data-testid="description-edit"
              >
                <svg
                  height="12"
                  viewBox="0 0 12 12"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  >
                    <path
                      d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                      stroke="#555770"
                    />
                    <path
                      d="M6.583 5.146l2.063-2.063"
                      opacity="0.3"
                      stroke="#606170"
                    />
                  </g>
                </svg>
              </span>
            </label>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main bp3-label descriptionLabel"
            >
              optionalField
              <span
                class="bp3-icon StyledProps--main editOpen"
                data-icon="Edit"
                data-name="edit"
                data-testid="tags-edit"
              >
                <svg
                  height="12"
                  viewBox="0 0 12 12"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  >
                    <path
                      d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                      stroke="#555770"
                    />
                    <path
                      d="M6.583 5.146l2.063-2.063"
                      opacity="0.3"
                      stroke="#606170"
                    />
                  </g>
                </svg>
              </span>
            </label>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;

exports[`NameIdDescriptionTags  tests Renders/snapshots On Edit Render - Name, ID, Description, and Tags 1`] = `
<div>
  <div
    class="OverlaySpinner--overlaySpinner"
  >
    <form
      class="FormikForm--main"
    >
      <div>
        <div
          class="StyledProps--font StyledProps--main main"
        >
          <div
            class="InputWithIdentifier--txtNameContainer TextInput--main"
          >
            <div
              class="Layout--horizontal Layout--layout-spacing-xsmall StyledProps--main InputWithIdentifier--txtIdContainer"
            >
              <p
                class="StyledProps--font StyledProps--main"
              >
                ID
                :
              </p>
              <span
                class="bp3-popover-wrapper"
              >
                <span
                  class="bp3-popover-target"
                >
                  <div
                    class="bp3-editable-text InputWithIdentifier--idValue"
                    tabindex="0"
                  >
                    <span
                      class="bp3-editable-text-content"
                      style="height: 1px; line-height: 1px; min-width: 0;"
                    >
                      name123
                    </span>
                  </div>
                </span>
              </span>
              <span
                class="bp3-icon StyledProps--main"
                data-icon="Edit"
                style="vertical-align: middle; cursor: pointer;"
              >
                <svg
                  height="12"
                  viewBox="0 0 12 12"
                  width="12"
                  xmlns="http://www.w3.org/2000/svg"
                >
                  <g
                    fill="none"
                    fill-rule="evenodd"
                    stroke-linecap="round"
                    stroke-linejoin="round"
                  >
                    <path
                      d="M8.66 1.823h0L2.244 8.239v1.75h1.75l6.416-6.416a1.75 1.75 0 00-1.75-1.75z"
                      stroke="#555770"
                    />
                    <path
                      d="M6.583 5.146l2.063-2.063"
                      opacity="0.3"
                      stroke="#606170"
                    />
                  </g>
                </svg>
              </span>
            </div>
            <div
              class="bp3-form-group"
              data-id="name-0"
            >
              <label
                class="bp3-label"
                for="name"
              >
                <span
                  class="Tooltip--acenter"
                  data-tooltip-id="TestWrapper_name"
                >
                  name
                </span>
                 
                <span
                  class="bp3-text-muted"
                />
              </label>
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input-group"
                >
                  <input
                    autocomplete="off"
                    class="bp3-input"
                    name="name"
                    placeholder="common.namePlaceholder"
                    type="text"
                    value="name-123"
                  />
                </div>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
            style="margin-bottom: 0px;"
          >
            <label
              class="Label--main bp3-label descriptionLabel"
            >
              optionalField
            </label>
            <div
              class="bp3-form-group"
              data-id="description-1"
            >
              <div
                class="bp3-form-content"
              >
                <textarea
                  autocomplete="off"
                  class="bp3-input bp3-fill"
                  maxlength="1024"
                  name="description"
                  placeholder="common.descriptionPlaceholder"
                >
                  test description
                </textarea>
              </div>
            </div>
          </div>
          <div
            class="StyledProps--font StyledProps--main"
          >
            <label
              class="Label--main bp3-label descriptionLabel"
            >
              optionalField
            </label>
            <div
              class="bp3-form-group"
              data-id="undefined-2"
            >
              <div
                class="bp3-form-content"
              >
                <div
                  class="bp3-input bp3-tag-input"
                >
                  <div
                    class="bp3-tag-input-values"
                  >
                    <span
                      class="bp3-tag"
                      data-tag-index="0"
                    >
                      <span
                        class="bp3-text-overflow-ellipsis bp3-fill"
                      >
                        test123:abc
                      </span>
                      <button
                        class="bp3-tag-remove"
                        type="button"
                      >
                        <span
                          class="bp3-icon bp3-icon-small-cross"
                          icon="small-cross"
                        >
                          <svg
                            data-icon="small-cross"
                            height="16"
                            viewBox="0 0 16 16"
                            width="16"
                          >
                            <desc>
                              small-cross
                            </desc>
                            <path
                              d="M9.41 8l2.29-2.29c.19-.18.3-.43.3-.71a1.003 1.003 0 00-1.71-.71L8 6.59l-2.29-2.3a1.003 1.003 0 00-1.42 1.42L6.59 8 4.3 10.29c-.19.18-.3.43-.3.71a1.003 1.003 0 001.71.71L8 9.41l2.29 2.29c.18.19.43.3.71.3a1.003 1.003 0 00.71-1.71L9.41 8z"
                              fill-rule="evenodd"
                            />
                          </svg>
                        </span>
                      </button>
                    </span>
                    <input
                      class="bp3-input-ghost"
                      data-mentions="kv-tag-input-tags}"
                      value=""
                    />
                  </div>
                </div>
              </div>
            </div>
          </div>
        </div>
      </div>
    </form>
  </div>
</div>
`;
